--- a/CellAuto.css
+++ b/CellAuto.css
@@ -2,6 +2,7 @@ body{
 background-color:#DEDFD9;
 font-family:sans-serif;
 font-size:0.7em;
+
 }
 #clicker{
 width:40px;
@@ -9,12 +10,17 @@ height:15px;
 padding-top:4px;
 margin-left:10px;
 border:1px solid #AFADAB;
-
+background-color:#DEDFD9;
 border-radius: 5px;
 text-align:center;
 margin-top:5px;
 cursor:pointer;
 
+}
+
+#clicker:hover{
+border:1px solid #AFADAB;
+background-color:#8E6F79;
 }
 
 #canvas{
@@ -27,6 +33,14 @@ border-radius: 15px;
 background-color:#FFFFFF;
 width:1280px;
 height:720px;
+
+-moz-box-shadow: 1px 1px 3px #000;
+-webkit-box-shadow: 1px 1px 3px #000;
+box-shadow: 1px 1px 3px #000;
+/* For IE 8 */
+-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=3, Direction=135, Color='#000000')";
+/* For IE 5.5 - 7 */
+filter: progid:DXImageTransform.Microsoft.Shadow(Strength=3, Direction=135, Color='#000000');
 }
 
 #canvasdiv{
@@ -47,6 +61,15 @@ background-color:#888888;
 position:absolute;
 top:0;
 left:0;
+width:60px;
+
+-moz-box-shadow: 1px 1px 3px #000;
+-webkit-box-shadow: 1px 1px 3px #000;
+box-shadow: 1px 1px 3px #000;
+/* For IE 8 */
+-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=3, Direction=135, Color='#000000')";
+/* For IE 5.5 - 7 */
+filter: progid:DXImageTransform.Microsoft.Shadow(Strength=3, Direction=135, Color='#000000');
 
 }
 #container{
